--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ classifiers = ["License :: OSI Approved :: MIT License"]
 readme = "README.md"
 
 [project.optional-dependencies]
-dev = ["pytest", "coverage"]
+test = ["pytest", "coverage"]
+build = ["build", "setuptools", "setuptools_scm","wheel"]
 
 [build-system]
 requires = [
