--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -e .
-        python -m pip install -e .[dev]
+        python -m pip install -e .[test]
     - name: Test with coverage and pytest
       run: |
         coverage run -m pytest -v && coverage report --show-missing --cov-fail-under=70
